--- a/BLAZAMGui/UI/Users/NewTemplateUser.razor
+++ b/BLAZAMGui/UI/Users/NewTemplateUser.razor
@@ -29,7 +29,8 @@
                 {
 
 
-                    <MudTextField Label="@AppLocalization["Description"]"
+                    <MudTextField Immediate=true
+                                  Label="@AppLocalization["Description"]"
                                   @bind-Value=@User.Description
                                   Disabled=@(!IsAdmin && !IsEditableTemplateField(ActiveDirectoryFields.Description))
                                   Required=@(IsRequiredTemplateField(ActiveDirectoryFields.Description)) />
@@ -46,7 +47,8 @@
 
                     }
 
-                    <MudTextField Label="@AppLocalization["Email Address"]"
+                    <MudTextField Immediate=true
+                                  Label="@AppLocalization["Email Address"]"
                                   @bind-Value="User.Email"
                                   Disabled=@(!IsAdmin && !IsEditableTemplateField(ActiveDirectoryFields.Mail))
                                   Required=@((DirectoryTemplate.EffectiveSendWelcomeEmail == true && DirectoryTemplate.EffectiveAskForAlternateEmail != true)||
@@ -60,7 +62,8 @@
                 {
 
 
-                    <MudTextField Label="@AppLocalization["Employee Id"]"
+                    <MudTextField Immediate=true
+                                  Label="@AppLocalization["Employee Id"]"
                                   @bind-Value="@User.EmployeeId"
                                   Disabled=@(!IsAdmin && !IsEditableTemplateField(ActiveDirectoryFields.EmployeeId))
                                   Required=@(IsRequiredTemplateField(ActiveDirectoryFields.EmployeeId)) />
@@ -73,7 +76,8 @@
                 {
 
 
-                    <MudTextField Label="@AppLocalization["Department"]"
+                    <MudTextField Immediate=true
+                                  Label="@AppLocalization["Department"]"
                                   @bind-Value="@User.Department"
                                   Disabled=@(!IsAdmin && !IsEditableTemplateField(ActiveDirectoryFields.Department))
                                   Required=@(IsRequiredTemplateField(ActiveDirectoryFields.Department)) />
@@ -85,7 +89,8 @@
                 {
 
 
-                    <MudTextField Label="@AppLocalization["Company"]"
+                    <MudTextField Immediate=true
+                                  Label="@AppLocalization["Company"]"
                                   @bind-Value="@User.Company"
                                   Disabled=@(!IsAdmin && !IsEditableTemplateField(ActiveDirectoryFields.Company))
                                   Required=@(IsRequiredTemplateField(ActiveDirectoryFields.Company)) />
@@ -98,7 +103,8 @@
                 {
 
 
-                    <MudTextField Label="@AppLocalization["Job Title"]"
+                    <MudTextField Immediate=true
+                                  Label="@AppLocalization["Job Title"]"
                                   @bind-Value="@User.Title"
                                   Disabled=@(!IsAdmin && !IsEditableTemplateField(ActiveDirectoryFields.Title))
                                   Required=@(IsRequiredTemplateField(ActiveDirectoryFields.Title)) />
@@ -111,7 +117,8 @@
                 {
 
 
-                    <MudTextField Label="@AppLocalization["Office"]"
+                    <MudTextField Immediate=true
+                                  Label="@AppLocalization["Office"]"
                                   @bind-Value="@User.PhysicalDeliveryOfficeName"
                                   Disabled=@(!IsAdmin && !IsEditableTemplateField(ActiveDirectoryFields.PhysicalDeliveryOffice))
                                   Required=@(IsRequiredTemplateField(ActiveDirectoryFields.PhysicalDeliveryOffice)) />
@@ -137,7 +144,8 @@
                 {
 
 
-                    <MudTextField Label="@AppLocalization["Home Phone"]"
+                    <MudTextField Immediate=true
+                                  Label="@AppLocalization["Home Phone"]"
                                   @bind-Value="@User.HomePhone"
                                   Disabled=@(!IsAdmin && !IsEditableTemplateField(ActiveDirectoryFields.HomePhone))
                                   Required=@(IsRequiredTemplateField(ActiveDirectoryFields.HomePhone)) />
@@ -150,7 +158,8 @@
                 {
 
 
-                    <MudTextField Label="@AppLocalization["Street Address"]"
+                    <MudTextField Immediate=true
+                                  Label="@AppLocalization["Street Address"]"
                                   @bind-Value="@User.StreetAddress"
                                   Disabled=@(!IsAdmin && !IsEditableTemplateField(ActiveDirectoryFields.StreetAddress))
                                   Required=@(IsRequiredTemplateField(ActiveDirectoryFields.StreetAddress)) />
@@ -163,7 +172,8 @@
                 {
 
 
-                    <MudTextField Label="@AppLocalization["Street"]"
+                    <MudTextField Immediate=true
+                                  Label="@AppLocalization["Street"]"
                                   @bind-Value="@User.POBox"
                                   Disabled=@(!IsAdmin && !IsEditableTemplateField(ActiveDirectoryFields.POBox))
                                   Required=@(IsRequiredTemplateField(ActiveDirectoryFields.POBox)) />
@@ -176,7 +186,8 @@
                 {
 
 
-                    <MudTextField Label="@AppLocalization["City"]"
+                    <MudTextField Immediate=true
+                                  Label="@AppLocalization["City"]"
                                   @bind-Value="@User.City"
                                   Disabled=@(!IsAdmin && !IsEditableTemplateField(ActiveDirectoryFields.City))
                                   Required=@(IsRequiredTemplateField(ActiveDirectoryFields.City)) />
@@ -189,7 +200,8 @@
                 {
 
 
-                    <MudTextField Label="@AppLocalization["State"]"
+                    <MudTextField Immediate=true
+                                  Label="@AppLocalization["State"]"
                                   @bind-Value="@User.State"
                                   Disabled=@(!IsAdmin && !IsEditableTemplateField(ActiveDirectoryFields.State))
                                   Required=@(IsRequiredTemplateField(ActiveDirectoryFields.State)) />
@@ -202,7 +214,8 @@
                 {
 
 
-                    <MudTextField Label="@AppLocalization["Zip Code"]"
+                    <MudTextField Immediate=true
+                                  Label="@AppLocalization["Zip Code"]"
                                   @bind-Value="@User.Zip"
                                   Disabled=@(!IsAdmin && !IsEditableTemplateField(ActiveDirectoryFields.PostalCode))
                                   Required=@(IsRequiredTemplateField(ActiveDirectoryFields.PostalCode)) />
@@ -218,7 +231,8 @@
         {
 
 
-            <MudTextField Label="@AppLocalization["Site"]"
+            <MudTextField Immediate=true
+                          Label="@AppLocalization["Site"]"
                           @bind-Value="@User.Site"
                           Disabled=@(!IsAdmin && !IsEditableTemplateField(ActiveDirectoryFields.Site))
                           Required=@(IsRequiredTemplateField(ActiveDirectoryFields.Site)) />
@@ -238,7 +252,8 @@
                 {
 
 
-                    <MudTextField Label="@AppLocalization["Home Directory"]"
+                    <MudTextField Immediate=true
+                                  Label="@AppLocalization["Home Directory"]"
                                   @bind-Value="@User.HomeDirectory"
                                   Disabled=@(!IsAdmin && !IsEditableTemplateField(ActiveDirectoryFields.HomeDirectory))
                                   Required=@(IsRequiredTemplateField(ActiveDirectoryFields.HomeDirectory)) />
@@ -265,7 +280,8 @@
                 {
 
 
-                    <MudTextField Label="@AppLocalization["Script Path"]"
+                    <MudTextField Immediate=true
+                                  Label="@AppLocalization["Script Path"]"
                                   @bind-Value="@User.ScriptPath"
                                   Disabled=@(!IsAdmin && !IsEditableTemplateField(ActiveDirectoryFields.ScriptPath))
                                   Required=@(IsRequiredTemplateField(ActiveDirectoryFields.ScriptPath)) />
@@ -278,7 +294,8 @@
                 {
 
 
-                    <MudTextField Label="@AppLocalization["Profile Path"]"
+                    <MudTextField Immediate=true
+                                  Label="@AppLocalization["Profile Path"]"
                                   @bind-Value="@User.ProfilePath"
                                   Disabled=@(!IsAdmin && !IsEditableTemplateField(ActiveDirectoryFields.ProfilePath))
                                   Required=@(IsRequiredTemplateField(ActiveDirectoryFields.Description)) />
@@ -296,7 +313,8 @@
                 {
                     @if (field.CustomField != null)
                     {
-                        <MudTextField Validation=@(()=>{
+                        <MudTextField Immediate=true
+                                      Validation=@(()=>{
                           if(field.Required && User.NewEntryProperties[field.CustomField.FieldName]!=null
                           && User.NewEntryProperties[field.CustomField.FieldName].ToString()!="")
                           return true;
@@ -314,7 +332,9 @@
 
 
 
-        <MudButton Color=Color.Success Disabled=@(!IsValid) OnClick="@(()=>{OnValidSubmit.InvokeAsync();})">Next</MudButton>
+        <MudButton Color=Color.Success
+                   Disabled=@(!IsValid)
+                   OnClick="@(()=>{OnValidSubmit.InvokeAsync();})">Next</MudButton>
 
 
 
