--- a/BLAZAM/Pages/Groups/CreateGroup.razor
+++ b/BLAZAM/Pages/Groups/CreateGroup.razor
@@ -77,7 +77,7 @@
 
 
     string newGroupName="";
-    List<DirectoryTemplate> templates;
+    List<DirectoryTemplate> templates= new();
     IADOrganizationalUnit? parentOU;
     IADGroup? newGroup;
 
